--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <section class="header">
@@ -162,13 +168,19 @@
           <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
             <li class="ms-3">Contact me:</li>
             <li class="ms-3">
-              <a class="text-body-secondary" href="#"><i class="fa-brands fa-facebook"></i></a>
+              <a class="text-body-secondary" href="#"
+                ><i class="fa-brands fa-facebook"></i
+              ></a>
             </li>
             <li class="ms-3">
-              <a class="text-body-secondary" href="#"><i class="fa-brands fa-facebook-messenger"></i></a>
+              <a class="text-body-secondary" href="#"
+                ><i class="fa-brands fa-facebook-messenger"></i
+              ></a>
             </li>
             <li class="ms-3">
-              <a class="text-body-secondary" href="#"><i class="fa-brands fa-instagram"></i></a>
+              <a class="text-body-secondary" href="#"
+                ><i class="fa-brands fa-instagram"></i
+              ></a>
             </li>
           </ul>
         </footer>
