--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           alt="Avatar"
         />
         <!-- Masthead Heading-->
-        <h1 class="masthead-heading text-uppercase mb-0">Weeping Angel</h1>
+        <h1 class="masthead-heading text-uppercase mb-0 source-code-pro">Weeping Angel</h1>
         <!-- Icon Divider-->
         <div class="divider-custom divider-light">
           <div class="divider-custom-icon py-3">
@@ -40,7 +40,7 @@
           </div>
         </div>
         <!-- Masthead Subheading-->
-        <p class="masthead-subheading font-weight-light mb-0">Web Designer</p>
+        <p class="masthead-subheading font-weight-light mb-0 source-code-pro">Web Designer</p>
       </div>
     </section>
     <section class="portfolio">
@@ -60,7 +60,7 @@
             <div class="card shadow-sm">
               <img src="./images/tindog.png" alt="tindog" height="160" />
               <div class="card-body">
-                <p class="card-text">Tindog - Tinder for dogs</p>
+                <p class="card-text source-code-pro">Tindog - Tinder for dogs</p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
                     <button
@@ -69,7 +69,7 @@
                     >
                       <a
                         href="https://sondoan17.github.io/Tindog/"
-                        class="project-link"
+                        class="project-link source-code-pro"
                         >View</a
                       >
                     </button>
@@ -82,7 +82,7 @@
             <div class="card shadow-sm">
               <img src="./images/cat-dance.png" alt="cat-dance" height="160" />
               <div class="card-body">
-                <p class="card-text">Cat dance</p>
+                <p class="card-text source-code-pro">Cat dance</p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
                     <button
@@ -91,7 +91,7 @@
                     >
                       <a
                         href="https://sondoan17.github.io/cat-dance/"
-                        class="project-link"
+                        class="project-link source-code-pro"
                         >View</a
                       >
                     </button>
@@ -109,7 +109,7 @@
                 style="border-top-left-radius: 3%"
               />
               <div class="card-body">
-                <p class="card-text">Solar system</p>
+                <p class="card-text source-code-pro">Solar system</p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
                     <button
@@ -118,7 +118,7 @@
                     >
                       <a
                         href="https://sondoan17.github.io/solar-system/"
-                        class="project-link"
+                        class="project-link source-code-pro"
                         >View</a
                       >
                     </button>
@@ -142,7 +142,7 @@
           ><!-- <i class="fas fa-star"></i> Font Awesome fontawesome.com -->
         </div>
         <div class="col-lg-6 text-center">
-          <p class="lead">
+          <p class="lead source-code-pro">
             I am a web developer, i have i huge passion in coding and learning
             new language. I also love movie and comic
           </p>
@@ -160,13 +160,13 @@
               class="mb-3 me-2 mb-md-0 text-body-secondary text-decoration-none lh-1"
             >
             </a>
-            <span class="mb-3 mb-md-0 text-body-secondary"
+            <span class="mb-3 mb-md-0 text-body-secondary source-code-pro"
               >© 2024 WeepingAngel</span
             >
           </div>
 
           <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
-            <li class="ms-3">Contact me:</li>
+            <li class="ms-3 source-code-pro">Contact me:</li>
             <li class="ms-3">
               <a class="text-body-secondary" href="#"
                 ><i class="fa-brands fa-facebook"></i
