--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
           alt="Avatar"
         />
         <!-- Masthead Heading-->
-        <h1 class="masthead-heading text-uppercase mb-0 source-code-pro">Weeping Angel</h1>
+        <h1 class="masthead-heading text-uppercase mb-0 source-code-pro">
+          Weeping Angel
+        </h1>
         <!-- Icon Divider-->
         <div class="divider-custom divider-light">
           <div class="divider-custom-icon py-3">
@@ -40,7 +42,9 @@
           </div>
         </div>
         <!-- Masthead Subheading-->
-        <p class="masthead-subheading font-weight-light mb-0 source-code-pro">Web Designer</p>
+        <p class="masthead-subheading font-weight-light mb-0 source-code-pro">
+          Web Designer
+        </p>
       </div>
     </section>
     <section class="portfolio">
@@ -58,9 +62,16 @@
         <div class="row row-cols-1 row-cols-md-3 g-3 pt-3">
           <div class="col">
             <div class="card shadow-sm">
-              <img src="./images/tindog.png" alt="tindog" height="160" />
+              <img
+                src="./images/tindog.png"
+                alt="tindog"
+                height="160"
+                class="project-img"
+              />
               <div class="card-body">
-                <p class="card-text source-code-pro">Tindog - Tinder for dogs</p>
+                <p class="card-text source-code-pro">
+                  Tindog - Tinder for dogs
+                </p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
                     <button
@@ -80,7 +91,12 @@
           </div>
           <div class="col">
             <div class="card shadow-sm">
-              <img src="./images/cat-dance.png" alt="cat-dance" height="160" />
+              <img
+                src="./images/cat-dance.png"
+                alt="cat-dance"
+                height="160"
+                class="project-img"
+              />
               <div class="card-body">
                 <p class="card-text source-code-pro">Cat dance</p>
                 <div class="d-flex justify-content-between align-items-center">
@@ -106,7 +122,7 @@
                 src="./images/solar-system.png"
                 alt="solar-system"
                 height="160"
-                style="border-top-left-radius: 3%"
+                class="project-img"
               />
               <div class="card-body">
                 <p class="card-text source-code-pro">Solar system</p>
