fix some spelling

--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
         </div>
         <div class="col-lg-6 text-center">
           <p class="lead source-code-pro">
-            I am a web developer, i have i huge passion in coding and learning
+            I am a web developer, i have a huge passion in coding and learning
             new language. I also love movie and comic
           </p>
         </div>
