--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           </div>
         </div>
         <!-- Masthead Subheading-->
-        <p class="masthead-subheading font-weight-light mb-0 source-code-pro">
+        <p class="masthead-subheading font-weight-light mb-0 fs-3 source-code-pro">
           Web Designer
         </p>
       </div>
@@ -69,8 +69,8 @@
                 class="project-img"
               />
               <div class="card-body">
-                <p class="card-text source-code-pro">
-                  Tindog - Tinder for dogs
+                <p class="card-text source-code-pro fs-4">
+                  Tindog
                 </p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
@@ -80,7 +80,7 @@
                     >
                       <a
                         href="https://sondoan17.github.io/Tindog/"
-                        class="project-link source-code-pro"
+                        class="project-link source-code-pro fs-5"
                         >View</a
                       >
                     </button>
@@ -98,7 +98,7 @@
                 class="project-img"
               />
               <div class="card-body">
-                <p class="card-text source-code-pro">Cat dance</p>
+                <p class="card-text source-code-pro fs-4">Cat dance</p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
                     <button
@@ -107,7 +107,7 @@
                     >
                       <a
                         href="https://sondoan17.github.io/cat-dance/"
-                        class="project-link source-code-pro"
+                        class="project-link source-code-pro fs-5"
                         >View</a
                       >
                     </button>
@@ -125,7 +125,7 @@
                 class="project-img"
               />
               <div class="card-body">
-                <p class="card-text source-code-pro">Solar system</p>
+                <p class="card-text source-code-pro fs-4">Solar system</p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
                     <button
@@ -134,7 +134,7 @@
                     >
                       <a
                         href="https://sondoan17.github.io/solar-system/"
-                        class="project-link source-code-pro"
+                        class="project-link source-code-pro fs-5"
                         >View</a
                       >
                     </button>
@@ -158,7 +158,7 @@
           ><!-- <i class="fas fa-star"></i> Font Awesome fontawesome.com -->
         </div>
         <div class="col-lg-6 text-center">
-          <p class="lead source-code-pro">
+          <p class="lead source-code-pro fs-4">
             I am a web developer, i have a huge passion in coding and learning
             new language. I also love movie and comic
           </p>
@@ -176,26 +176,26 @@
               class="mb-3 me-2 mb-md-0 text-body-secondary text-decoration-none lh-1"
             >
             </a>
-            <span class="mb-3 mb-md-0 text-body-secondary source-code-pro"
+            <span class="mb-3 mb-md-0 text-body-secondary source-code-pro fs-6"
               >© 2024 WeepingAngel</span
             >
           </div>
 
           <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
-            <li class="ms-3 source-code-pro">Contact me:</li>
+            <li class="ms-3 source-code-pro fs-6">Contact me:</li>
             <li class="ms-3">
               <a class="text-body-secondary" href="#"
-                ><i class="fa-brands fa-facebook"></i
+                ><i class="fa-brands fa-facebook fs-5"></i
               ></a>
             </li>
             <li class="ms-3">
               <a class="text-body-secondary" href="#"
-                ><i class="fa-brands fa-facebook-messenger"></i
+                ><i class="fa-brands fa-facebook-messenger fs-5"></i
               ></a>
             </li>
             <li class="ms-3">
               <a class="text-body-secondary" href="#"
-                ><i class="fa-brands fa-instagram"></i
+                ><i class="fa-brands fa-instagram fs-5"></i
               ></a>
             </li>
           </ul>
