add new project

--- a/index.html
+++ b/index.html
@@ -59,7 +59,36 @@
         <div class="divider-custom flex-column align-items-center d-flex py-3">
           <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
         </div>
-        <div class="row row-cols-1 row-cols-md-3 g-3 pt-3">
+        <div class="row row-cols-1 row-cols-md-4 g-3 pt-3">
+          <div class="col">
+            <div class="card shadow-sm">
+              <img
+                src="./images/Dicegame.png"
+                alt="tindog"
+                height="160"
+                class="project-img"
+              />
+              <div class="card-body">
+                <p class="card-text source-code-pro fs-4">
+                  Dice game
+                </p>
+                <div class="d-flex justify-content-between align-items-center">
+                  <div class="btn-group">
+                    <button
+                      type="button"
+                      class="btn btn-sm btn-outline-secondary"
+                    >
+                      <a
+                        href="https://sondoan17.github.io/dice-game/"
+                        class="project-link source-code-pro fs-5"
+                        >View</a
+                      >
+                    </button>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
           <div class="col">
             <div class="card shadow-sm">
               <img
